@@ -54,8 +54,10 @@
   (define-main-key ("Return" :mod-1) 'enter-frame)
   (define-main-key ("Return" :mod-1 :shift) 'leave-frame)
   (define-main-key ("Return" :mod-5) 'frame-toggle-maximize)
-  (define-main-key ("Page_Up" :mod-1) 'frame-lower-child)
-  (define-main-key ("Page_Down" :mod-1) 'frame-raise-child)
+  (define-main-key ("Page_Up" :mod-1) 'frame-select-previous-child)
+  (define-main-key ("Page_Down" :mod-1) 'frame-select-next-child)
+  (define-main-key ("Page_Up" :mod-1 :control) 'frame-lower-child)
+  (define-main-key ("Page_Down" :mod-1 :control) 'frame-raise-child)
   (define-main-key ("Home" :mod-1) 'switch-to-root-frame)
   (define-main-key ("Home" :mod-1 :shift) 'switch-and-select-root-frame)
   (define-main-key ("F10" :mod-1) 'fast-layout-switch)
